[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "rusty"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.maturin]
features = ["extension-module"]
python-source = "python"

[tool.pytest.ini_options]
testpaths = ["python/tests"]
