[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "rusty"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "../rust/Cargo.toml"
python-source = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]